# idr-client

./: .config.template.yaml  .coveragerc  .gitignore  .pre-commit-config.yaml  .releaserc.yaml  LICENSE  README.md  config.yaml  extracts.csv  extracts.parquet  idr_client.spec  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  release.yml
app/: __init__.py  __main__.py  __version__.py
app/core/: README.md  __init__.py  domain.py  exceptions.py  mixins.py  pyproject.toml  serializer.py  task.py  transport.py
app/core/domain/interfaces/: __init__.py  etl_protocol.py  operations.py
app/core/domain/skeletal_imp/: base.py  metadata.py
app/core_v1/: exceptions.py  mixins.py  task.py
app/core_v1/domain/: __init__.py
app/core_v1/domain/interfaces/: __init__.py  base.py  etl_protocol.py  metadata.py  operations.py  terminals.py
app/core_v1/domain/skeletal_imp/: __init__.py  base.py  metadata.py  operations.py  terminals.py
app/imp/: __init__.py
app/imp/sql_data/: __init__.py  domain.py  exceptions.py
app/imp_v1/common/domain/: etl_protocol.py
app/imp_v1/common/lib/: config.py
app/imp_v1/http/: exceptions.py  lib.py  typings.py
app/imp_v1/http/domain/: __init__.py  metadata.py  operations.py  terminals.py
app/imp_v1/http/lib/: __init__.py  common.py  http_api_dialects.py  http_transport.py
app/imp_v1/idr_server/: __init__.py
app/imp_v1/idr_server/domain/: etl_protocol.py  metadata.py  operations.py
app/imp_v1/idr_server/lib/: idr_sever_v1_api.py
app/imp_v1/sql/: typings.py
app/imp_v1/sql/domain/: __init__.py  metadata.py  operations.py
app/lib/: __init__.py  app_registry.py  app_registry_v1.py  checkers.py  common_utils.py  config.py  module_loading.py  retry.py
app/lib/config/: __init__.py  config.py  exceptions.py  setting_initializer.py
app/lib/retry/: __init__.py  exceptions.py  retry.py  setting_initializers.py  types.py
app/lib/tasks/: __init__.py  common.py  concurrent.py  generic.py  pandas.py  sql.py
app/lib/transports/: __init__.py
app/lib/transports/http/: __init__.py  api_v1_dialect.py  http_api_dialect.py  http_transport.py  types.py
app/mods/common/: README.md  __init__.py  pyproject.toml
app/mods/common/domain/: etl_protocol.py
app/mods/common/lib/: __init__.py
app/mods/http/: README.md  exceptions.py  lib.py  pyproject.toml
app/mods/http/domain/: __init__.py  metadata.py  operations.py  terminals.py
app/mods/http/lib/: http_api_dialects.py  http_transport.py
app/mods/http/src/sghi/idr/client/http/: __init__.py  exceptions.py
app/mods/http/src/sghi/idr/client/http/domain/: __init__.py  metadata.py  operations.py  terminals.py
app/mods/http/src/sghi/idr/client/http/lib/: __init__.py  common.py  http_api_dialects.py  http_transport.py
app/mods/idr_server/: README.md  __init__.py  pyproject.toml
app/mods/idr_server/domain/: __init__.py  etl_protocol.py  metadata.py  operations.py
app/mods/idr_server/lib/: __init__.py  config.py  idr_sever_v1_api.py
app/mods/sql/: README.md  __init__.py  pyproject.toml
app/mods/sql/domain/: metadata.py  operations.py
app/mods/sql/lib/: config.py
app/runtime/: README.md  __main__.py  __metadata__.py  constants.py  etl_workflow.py  pyproject.toml  settings_initializers.py  setup.py  typings.py  usecases.py
app/runtime/tui/rich/: __init__.py  console.py  protocol_ui.py  ui.py
app/runtime/tui/simple/: __init__.py  printers.py  ui.py
app/runtime/ui/: __init__.py  no_ui.py
app/runtime/usecases/: __init__.py  etl_workflow.py  run_etl_protocol.py
app/runtime/utils/: config_file_loaders.py  printers.py
app/runtime/utils/dispatch/: common_signals.py  dispatcher.py
app/sghi-commons/: README.md  pyproject.toml
app/sghi-commons/docs/source/: conf.py  index.rst
app/sghi-commons/docs/source/_templates/: class.rst  exception.rst  module.rst
app/sghi-commons/docs/source/api/: sghi.app.conf.rst  sghi.app.dispatcher.rst  sghi.app.registry.rst  sghi.app.rst  sghi.app.setup.rst  sghi.config.Config.rst  sghi.config.ConfigurationError.rst  sghi.config.config.rst  (+71 more)
app/sghi-commons/src/sghi/: app.py  exceptions.py
app/use_cases/: __init__.py  fetch_metadata.py  main_pipeline.py  run_extraction.py  types.py  upload_extracts.py
configs/: test_configs.py
docs/: ARCHITECTURE.rst  CHANGELOG.md  CONTRIBUTING.rst
idr_client/: __main__.py  config.py
idr_client/configs/: config.py  test_configs.py
idr_client/core/: __init__.py  db_connection.py  metadata.py  mixins.py  qries.py  queries.py  static_queries.py  task.py
idr_client/data/: extracts.csv  idr_client.db  idr_client_old.db
idr_client/data/chunks/: chunk_0.csv  chunk_1.csv  chunk_10.csv  chunk_11.csv  chunk_12.csv  chunk_2.csv  chunk_3.csv  chunk_4.csv  chunk_5.csv  chunk_6.csv  chunk_7.csv  chunk_8.csv  chunk_9.csv
idr_client/lib/: __init__.py  metadata.py
idr_client/lib/tasks/: __init__.py  generic.py  sql.py
idr_client/tests/: test.py
idr_client/use_cases/: main_pipeline.py
requirements/: base.txt  build.txt  dev.txt  test.txt
tests/: __init__.py  factories.py  test_app.py  test_main.py
tests/core/: factories.py  test_domain.py  test_exceptions.py
tests/core/factories/: base.py  metadata.py  operations.py
tests/core_v1/factories/: __init__.py  base.py  metadata.py  operations.py
tests/imp/sql_data/: factories.py  test_domain.py
tests/imp_v1/sql/domain/: test_metadata.py  test_operations.py
tests/imp_v1/sql/factories/: __init__.py  metadata.py  operations.py
tests/lib/: test_app_registry.py  test_checkers.py  test_module_loading.py
tests/lib/config/: test_config.py
tests/lib/retry/: test_retry.py  test_setting_initializers.py
tests/lib/tasks/: test_common.py  test_concurrent.py  test_generic.py  test_sql.py
tests/lib/transports/http/: factories.py  test_api_v1_dialect.py  test_http.py  test_http_transport.py
tests/mods/sql/domain/: test_metadata.py  test_operations.py
tests/mods/sql/factories/: metadata.py  operations.py
tests/use_cases/: test_fetch_metadata.py  test_run_extraction.py  test_upload_extracts.py
(+86 files in other folders)
