[metadata]
name = idr_client
description = client service for fetching metadata from idr_server, run extraction, chunk and upload extracts to idr_server
version = 0.0.1
author = SIL
license_file = LICENSE
platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = idr_client
python_requires = >=3.7

[options.extras_require]
testing =
    pytest>=7.0
    pytest-cov>=3.0
    mypy>=0.961
    flake8>=4.0
    tox>=3.25

[options.package_data]
idr_client = py.typed

[mypy]
ignore_missing_imports = True
check_untyped_defs = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True

[flake8]
max-line-length = 160
